# coding-agent-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: allowed_folders.txt  bot.toml.example
src/: app.rs  config.rs  lib.rs  main.rs  task_manager.rs  task_types.rs  telegram.rs  whitelist.rs
src/acp/: backend.rs  bootstrap.rs  codex_rpc.rs  integrated_agent.rs  mod.rs  tests.rs
src/agent/: mod.rs
src/agent/codex/: mapping.rs  mod.rs  runtime.rs
src/bot/: mod.rs  telegram.rs
src/telegram/: access.rs  commands.rs  render.rs  tests.rs
