[package]
name = "coding-agent-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = "0.17.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.16", features = ["compat"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
